--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						</header>
 						<div class="content">
 							<p><strong>Cooking is therapeutic. </strong> It’s the quality time I get to spend with myself after all day mingling with colleagues and friends. It’s the loving time I get to focus on making a delicious meal for my partner. Although not the best chef in the world, all I can do is home cooking – but it is absolutely delicious! I make really good ginseng chicken soup. It’s super healthy and really tasty.</p>
-							<span class="image main"><img src="images/cooking2.JPG" alt="" /></span>
+							<span class="image main"><img src="images/cooking2.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -55,7 +55,7 @@
 						</header>
 						<div class="content">
 							<p>I know there’s always room for improvement and it’s not that hard if I put in time and effort into it. I would be making really clear and golden chicken soup while keeping the flavor rich. However, going to cooking classes seems to be too far from what I need, and browsing through those online materials is also time consuming. Forcing myself to take either of those approaches would just find myself end up collecting ways I have tried but given up. <strong>What is the most efficient way to have more control in cooking?</strong></p>
-							<span class="image main"><img src="images/cooking4.JPG" alt="" /></span>
+							<span class="image main"><img src="images/cooking4.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -66,7 +66,7 @@
 						</header>
 						<div class="content">
 							<p>My team has been working on crafting the best environment for people to have more control in cooking and therefore be natural and creative in their kitchen. After lots of interviews, ideations, prototypes, testings, and dozens of iterations, we found out the best way of gaining a skill is not about finding the best teachers, buying the best materials, but <strong>simply comparing with yourself.</strong></p>
-							<span class="image main"><img src="images/cooking5.JPG" alt="" /></span>
+							<span class="image main"><img src="images/cooking5.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -170,7 +170,7 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/kitchen08.JPG" class="landscape"><img src="images/gallery/thumbs/kitchen08.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/kitchen08.jpg" class="landscape"><img src="images/gallery/thumbs/kitchen08.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/kitchen02.jpg" ><img src="images/gallery/thumbs/kitchen02.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/kitchen03.jpg"><img src="images/gallery/thumbs/kitchen03.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/kitchen04.jpg" class="landscape"><img src="images/gallery/thumbs/kitchen04.jpg" alt="" /></a>
