--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 							<h2>IN YOUR KETCHEN</h2>
 						</header>
 						<div class="content">
-							<p><strong>in your kitchen</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p>We design Moment to look good <strong>in your kitchen</strong> as it blends well in the background.</p>
 
 							<!-- Section -->
 								<section>
@@ -205,7 +205,7 @@
 											<a href="images/gallery/fulls/akitchen08.jpg" class="landscape"><img src="images/gallery/thumbs/akitchen08.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/akitchen02.jpg" ><img src="images/gallery/thumbs/akitchen02.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/akitchen03.jpg"><img src="images/gallery/thumbs/akitchen03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/akitchen04.jpg" class="landscape"><img src="images/gallery/thumbs/akitchen04.jpg" alt="" /></a>
+										<!-- 	<a href="images/gallery/fulls/akitchen04.jpg" class="landscape"><img src="images/gallery/thumbs/akitchen04.jpg" alt="" /></a> -->
 										</div>
 									</div>
 								</section>
@@ -218,7 +218,7 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/akitchen05.jpg" class="landscape"><img src="images/gallery/thumbs/akitchen05.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/akitchen04.jpg" class="landscape"><img src="images/gallery/thumbs/akitchen04.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/akitchen06.jpg"><img src="images/gallery/thumbs/akitchen06.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/akitchen07.jpg"><img src="images/gallery/thumbs/akitchen07.jpg" alt="" /></a>
 										</div>
@@ -531,7 +531,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
+							<p><strong>Get in touch</strong> and leave your comment.</p>
 							<form>
 								<div class="fields">
 									<div class="field half">
@@ -553,7 +553,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">preorder@getmoment.today</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
@@ -561,7 +561,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span>1-3 Broad Plain, Bristol, BS20JP</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
@@ -579,7 +579,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy; Moment. All rights reserved. Design: <a href="https://getmomemt.today">Moment</a>.</div>
 
 			</div>
 
