--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 							</ul>
 								<ul style="margin-left: 60px;">
 									<li>Moment stops automatically when you finish cooking</li>
-									<li>You'll get notified when Cooklet's uploaded</li>
+									<li>You'll get notified when video's uploaded</li>
 								</ul>
 							<img src="images/gif/2notified.gif" style="width: 400px; height:auto;"/>
 							
@@ -116,7 +116,7 @@
 								<li class="icon solid fa-redo">Retrospect</li>
 							</ul>
 								<ul style="margin-left: 60px;">
-									<li>Check your Cooklet</li>
+									<li>Check your video</li>
 									<li>Debrief and Retrospect</li>
 								</ul>
 							<img src="images/gif/3watch.gif" style="width: 400px; height:auto;"/>
@@ -128,7 +128,7 @@
 							</ul>
 								<ul style="margin-left: 60px;">
 									<li>Tap Moment when you’re about to cook</li>
-									<li>Access to your Cooklets</li>
+									<li>Access to your videos</li>
 								</ul>
 							<img src="images/gif/1tap.gif" style="width: 400px; height:auto;"/>
 
@@ -136,7 +136,7 @@
 								<li class="icon solid fa-redo">Recap</li>
 							</ul>
 								<ul style="margin-left: 60px;">
-									<li>Review the Cooklet you want to make again</li>
+									<li>Review the dish you want to make again</li>
 									<li>Get ready with just enough information</li>
 									<li>Make mental notes on the hindsights</li>
 								</ul>
@@ -176,7 +176,7 @@
 							<ul class="feature-icons">
 								<li class="icon solid fa-play">Nimble Retrospect</li>
 							</ul>
-							<p style="width:30em;">Moment helps you to retrospect and hindsight efficiently. It gives you a 10x nimble playback (a.k.a Cooklet) which makes it the most effective way to debrief what makes the delicious dish in front of you.</p>
+							<p style="width:30em;">Moment helps you to retrospect and hindsight efficiently. It gives you a 10x nimble playback which makes it the most effective way to debrief what makes the delicious dish in front of you.</p>
 							<ul class="feature-icons">
 								<li class="icon solid fa-play">Handy Reminder</li>
 							</ul>
@@ -202,15 +202,15 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/akitchen08.jpg" class="landscape"><img src="images/gallery/thumbs/akitchen08.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/akitchen06.jpg" class="landscape"><img src="images/gallery/thumbs/akitchen06.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/akitchen02.jpg" ><img src="images/gallery/thumbs/akitchen02.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/akitchen03.jpg"><img src="images/gallery/thumbs/akitchen03.jpg" alt="" /></a>
-										<!-- 	<a href="images/gallery/fulls/akitchen04.jpg" class="landscape"><img src="images/gallery/thumbs/akitchen04.jpg" alt="" /></a> -->
+											<a href="images/gallery/fulls/akitchen08.jpg" class="landscape"><img src="images/gallery/thumbs/akitchen08.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
 
-							<!-- Section -->
+							<!-- Section everyday cooking
 								<section>
 									<header>
 										<h3>everyday cooking</h3>
@@ -224,8 +224,8 @@
 										</div>
 									</div>
 								</section>
-
-							<!-- Section -->
+							-->
+							<!-- Section: Use over time
 								<section>
 									<header>
 										<h3>Use over time</h3>
@@ -239,7 +239,7 @@
 										</div>
 									</div>
 								</section>
-
+							 -->
 						</div>
 					</section>
 
