--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">preorder@getmoment.today</a>
+									<a href="#">hello@getmoment.today</a>
 								</li>
 								
 								<li>
