--- a/index.html
+++ b/index.html
@@ -560,8 +560,17 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Get in touch</strong> and leave your comment.</p>
-							<form>
+							<!-- <p><strong>Get in touch</strong> with us through email.</p> -->
+
+							
+							<h4>Email</h4>
+							<a href="#">hello@getmoment.today</a>
+							
+							<p>
+							<h4>Address</h4>
+							<span>1-3 Broad Plain, Bristol, BS20JP</span>
+							</p>
+							<!-- <form>
 								<div class="fields">
 									<div class="field half">
 										<input type="text" name="name" id="name" placeholder="Name" />
@@ -576,11 +585,12 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" class="button primary" /></li>
 								</ul>
-							</form>
+							</form> -->
+
 						</div>
 						<footer>
 							<ul class="items">
-								<li>
+								<!-- <li>
 									<h3>Email</h3>
 									<a href="#">hello@getmoment.today</a>
 								</li>
@@ -588,7 +598,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Address</h3>
 									<span>1-3 Broad Plain, Bristol, BS20JP</span>
-								</li>
+								</li> -->
 								<!-- <li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
@@ -601,10 +611,12 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									</ul>
 								</li> -->
 							</ul>
+
 						</footer>
 					</section>
 
 				<!-- Copyright -->
+
 					<div class="copyright">&copy; Moment. All rights reserved. Design: <a href="https://getmomemt.today">Moment</a>.</div>
 
 			</div>
