--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								
 							<!-- Notified -->
 							<ul class="feature-icons"  style=" width: 800px;">
-								<li class="icon solid fa-exclamation" > <span style="color:grey;"> Get </span><strong>notified</strong> <span style="color:grey;"> when finished cooking</span></li>
+								<li class="icon solid fa-exclamation" > <strong>Receive</strong> <span style="color:grey;"> your video when finished cooking</span></li>
 							</ul>
 								<!-- <ul style="margin-left: 60px;">
 									<li>Moment stops automatically when you finish cooking</li>
@@ -115,7 +115,7 @@
 							
 							<!-- Retrospect -->
 							<ul class="feature-icons" style="width: 800px;">
-								<li class="icon solid fa-redo"> <span style="color:grey;"> Debrief with your video and</span> <strong>Retrospect</strong></li>
+								<li class="icon solid fa-redo"> <span style="color:grey;"> Debrief with the video and</span> <strong>Retrospect</strong></li>
 							</ul>
 							<!-- 	<ul style="margin-left: 60px;">
 									<li>Check your video</li>
