--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Moment – ready for preorder!</title>
+		<title>Moment is ready for preorder!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -105,7 +105,8 @@
 								
 							<!-- Notified -->
 							<ul class="feature-icons"  style=" width: 800px;">
-								<li class="icon solid fa-exclamation" > <strong>Receive</strong> <span style="color:grey;"> your video when finished cooking</span></li>
+								<!-- fa-cloud-download-alt fa-photo-video  -->
+								<li class="icon solid fa-play-circle" > <strong>Receive</strong> <span style="color:grey;"> your video playback when finished cooking</span></li>
 							</ul>
 								<!-- <ul style="margin-left: 60px;">
 									<li>Moment stops automatically when you finish cooking</li>
@@ -185,7 +186,7 @@
 							</ul>
 							<p style="width:30em;">Moment records every moment of your cooking for you. It recognizes when you start cooking, records automatically and archives all your cooking for later review.</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-exclamation">Done notification</li>
+								<li class="icon solid fa-play-circle">Instant Playback</li>
 							</ul>
 							<p style="width:30em;"> Moment texts you the playback every time you finish cooking. The best timing for retrospective is right after cooking.</p>
 							<ul class="feature-icons">
