efficient prep, icon change

--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
 							</ul>
 							<p style="width:30em;"> Moment texts you the playback every time you finish cooking. The best timing for retrospective is right after cooking.</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-play">Nimble Retrospect</li>
+								<li class="icon solid fa-redo">Nimble Retrospect</li>
 							</ul>
 							<p style="width:30em;">Moment helps you to retrospect and hindsight efficiently. It gives you a 10x nimble playback which makes it the most effective way to debrief what makes the delicious dish in front of you.</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-play">Handy Reminder</li>
+								<li class="icon solid fa-bolt">Efficient Preparation</li>
 							</ul>
 							<p style="width:30em;">Moment provides you just enough information to get ready quickly before cooking. Play back the dish you want to cook again, that playback will set you ready straight away.</p>
 						</div>
