--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 							<ul class="feature-icons">
 								<li class="icon solid fa-redo">Nimble Retrospect</li>
 							</ul>
-							<p style="width:30em;">Moment helps you to retrospect and hindsight efficiently. It gives you a 10x nimble playback which makes it the most effective way to debrief what makes the delicious dish in front of you.</p>
+							<p style="width:30em;">Moment helps you to retrospect and hindsight efficiently. It gives you a 10x playback which makes it the most nimble way to debrief what makes the delicious dish in front of you.</p>
 							<ul class="feature-icons">
 								<li class="icon solid fa-bolt">Efficient Preparation</li>
 							</ul>
