--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 									<li>No setup required</li>
 									<li>Moment starts automatically</li>
 								</ul> -->
-							<!-- <img src="images/gif/1cook.gif" style="width: 400px; height:auto;"/> -->
-							<iframe src="https://giphy.com/embed/JRgSTg8Em5nUZU7erB" width="400" height="320" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/JRgSTg8Em5nUZU7erB">via GIPHY</a></p>
+							<img src="images/gif/1cook.gif" style="width: 400px; height:auto;"/>
+							<!-- <iframe src="https://giphy.com/embed/JRgSTg8Em5nUZU7erB" width="400" height="320" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/JRgSTg8Em5nUZU7erB">via GIPHY</a></p> -->
 								
 							<!-- Notified -->
 							<ul class="feature-icons"  style=" width: 800px;">
