--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="is-preload">
+	<body class="">
 
 		<!-- Wrapper -->
 			<div id="wrapper">
