--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<div class="content">
 							<p style="font-size: 30px; color: #CCC;">STORY</p>
 							<p><strong>Cooking is therapeutic. </strong> It’s the quality time I get to spend with myself after all day mingling with colleagues and friends. It’s the loving time I get to focus on making a delicious meal for my partner. Although not the best chef in the world, all I can do is home cooking – but it is absolutely delicious! I make really good ginseng chicken soup. It’s super healthy and really tasty.</p>
-							<span class="image main"><img src="images/icooking2.jpg" alt="" /></span>
+							<span class="image main"><img src="images/story1.png" alt="" /></span>
 						</div>
 					</section>
 
@@ -59,7 +59,7 @@
 						</header>
 						<div class="content">
 							<p>I know there’s always room for improvement and it’s not that hard if I put in time and effort into it. I would be making really clear and golden chicken soup while keeping the flavor rich. However, going to cooking classes seems to be too far from what I need, and browsing through those online materials is also time consuming. Forcing myself to take either of those approaches would just find myself end up collecting ways I have tried but given up. <strong>What is the most efficient way to have more control in cooking?</strong></p>
-							<span class="image main"><img src="images/icooking4.jpg" alt="" /></span>
+							<span class="image main"><img src="images/story2.png" alt="" /></span>
 						</div>
 					</section>
 
@@ -70,7 +70,7 @@
 						</header>
 						<div class="content">
 							<p>My team has been working on crafting the best environment for people to have more control in cooking and therefore be natural and creative in their kitchen. After lots of interviews, ideations, prototypes, testings, and dozens of iterations, we found out the best way of gaining a skill is not about finding the best teachers, buying the best materials, but <strong>simply comparing with yourself.</strong></p>
-							<span class="image main"><img src="images/icooking5.jpg" alt="" /></span>
+							<span class="image main"><img src="images/story3.png" alt="" /></span>
 						</div>
 					</section>
 
@@ -81,7 +81,7 @@
 						</header>
 						<div class="content">
 							<p>Learning is all about doing it, reflecting and repeating. Cooking is the same! It’s about cooking, having a think, and making it again next time. It is really important to retrospect and take the benefit of hindsighting. You will find out what you want to add to, remove from, or keep in your own cooking – just like the <strong>“Start, stop, continue retrospective”.</strong> If you find yourself stuck at a certain point, just do something new. Don’t start over again. Just make a small change and see how it goes. You will find the answers very soon.</p>
-							<span class="image main"><img src="images/icooking6.jpg" alt="" /></span>
+							<span class="image main"><img src="images/story4.png" alt="" /></span>
 						</div>
 					</section>
 
