--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 						<div class="content">
 							<p style="font-size: 30px; color: #CCC;">STORY</p>
-							<p><strong>Cooking is therapeutic. </strong> It’s the quality time I get to spend with myself after all day mingling with colleagues and friends. It’s the loving time I get to focus on making a delicious meal for my partner. Although not the best chef in the world, all I can do is home cooking – but it is absolutely delicious! I make really good ginseng chicken soup. It’s super healthy and really tasty.</p>
+							<p><strong>Cooking is therapeutic. </strong> It’s the quality time I get to spend with myself after all day mingling with colleagues and friends. It’s the loving time I get to focus on making a delicious meal for my partner. Although not the best chef in the world, all I can do is home cooking – but it is absolutely delicious! I make really good chicken soup. It’s super healthy and really tasty.</p>
 							<span class="image main"><img src="images/story1.png" alt="" /></span>
 						</div>
 					</section>
