--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/product.png" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/exp5.png" alt="" /></span>
 							<!-- <div style="margin: 99% auto;">
 							<ul class="feature-icons" style="position: absolute;">
 								<li class="icon solid fa-video" style="width=20%;"><br><br>
