--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 							<br>
 							
 									<ul class="actions">
-										<li><a href="https://www.paypal.me/getmomenttoday/400" class="button primary">Pre-order
+										<li><a href="https://www.paypal.me/getmomenttoday/400" class="button primary">Pre-order</a></li>
 									</ul>
 						</div>
 					</section>
@@ -334,8 +334,7 @@
 
 						</div>
 						<footer>
-							<ul class="items">
-							</ul>
+						
 
 						</footer>
 					</section>
