update last day

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							</ul>
 
 							</div>
-							<p><strong>Limited pre-order available</strong> before 3rd May</p>
+							<p><strong>Limited pre-order available</strong> before 1st May</p>
 							<ul class="actions">
 								<li><a href="#pre-order" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -292,7 +292,7 @@
 							<h2>Pre-order</h2>
 						</header>
 						<div class="content">
-							<p><strong>Limited pre-order available</strong> before 3rd May (50 devices left) </p>
+							<p><strong>Limited pre-order available</strong> before 1st May (49 devices left) </p>
 							
 							<h4>Price</h4>
 							<ul class="alt">
