--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 							<ul class="alt">
 								<li></li>
 								<li>
-								Moment <div style="float: right;">$400</div>
+								Moment <div style="float: right;">$220 + $15/month</div>
 								<br>							
 								</li>
 								<li></li>
@@ -327,7 +327,7 @@
 						<div class="content">
 							<!-- <p><strong>Get in touch</strong> with us through email.</p> -->
 
-							<p>Up for monthly payment option? Talk to us.</p>
+							<p>What to know more? Get in touch with us.</p>
 							<h4>Email</h4>
 							<a href="#">hello@getmoment.today</a>
 							
