--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<header>
 							<h1>Moment</h1>
 							<h2><!-- cook like a chef through  everyday cooking --></h2>
-							<h3>free yourself from recipes by capturing everyday cooking</h3>
+							<h3>graduate from recipes by capturing everyday cooking</h3>
 						
 							<div>
 							<ul class="feature-icons">
