--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<div class="emvideo">
 		<iframe width="100%" height="100%"
-			src="https://www.youtube.com/embed/pTUvdCluKe8" allowfullscreen>
+			src="https://www.youtube.com/embed/pTUvdCluKe8?&amp;version=3&amp;modestbranding=1&amp;rel=0&amp;autoplay=1&amp;loop=1&amp;showinfo=0"  frameborder="0" allowfullscreen>
 		</iframe>
 	</div>
 <!-- wrapper -->
