--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 						<div class="content">
 
-							<p style="font-size: 30px; color: #CCC;">STORY</p>
+							<p style="font-size: 30px; color: #CCC;">STORY: COMPARE YOURSELF TO YOURSELF</p>
 							<p><strong>Cooking is therapeutic. </strong>After a day of mingling with colleagues and friends, cooking gives me quality alone time. Cooking is also the loving time I get to focus on making delicious meals for my household. I am a home cook, certainly not the best chef in the world – but what I make is absolutely delicious! My best dish is ginseng chicken soup. It’s super healthy and really tasty.</p>
 							<span class="image main"><img src="images/story1.png" alt="" /></span>
 						</div>
