--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<h1>Moment</h1>
 								
 								<!-- <h3>Track improvements through capturing everyday cooking</h3> -->
-								<h3>Capture your everyday cooking and track how you become better</h3>
+								<h3>Capture your everyday cooking and track improvements</h3>
 
 								<div>
 						<!-- 		<ul class="feature-icons">
