--- a/dev/index.html
+++ b/dev/index.html
@@ -137,7 +137,7 @@
                     <div class="row m0 process-icon">
                         <img src="gif/small/notification.gif" alt="">
                     </div>
-                    <h3>Record</h3>
+                    <h3>Receive</h3>
                     <p>Receive your recording when it’s ready</p>
                 </div>
                 <div class="col-sm-4 work-process wow fadeIn" data-wow-delay="1s">
